test/expected/regression-net-socket.txt
/scripts/regression-net-socket.js:6
  throw new Error('trace');
  ^

Error: trace
    at Server.<anonymous> (/scripts/regression-net-socket.js:6:9)
    at emitOne (events.js:115:13)
    at Server.emit (events.js:210:7)
    at TCP.onconnection (net.js:1549:8)
    at createServerHandle (net.js:1239:14)
    at Server.setupListenHandle [as _listen2] (net.js:1295:14)
    at listenInCluster (net.js:1363:12)
    at GetAddrInfoReqWrap.doListen [as callback] (net.js:1489:7)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:97:10)
    at Object.lookup (dns.js:180:19)
    at lookupAndListen (net.js:1484:7)
    at Server.listen (net.js:1459:7)
    at Object.<anonymous> (/scripts/regression-net-socket.js:9:8)
    at Module._compile (module.js:569:30)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Function.Module.runMain (module.js:605:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
